tests/fixtures/invalid/bool_rshift_bytes.py
# Cannot right shift Bool and Bytes
x: bool = True >> b"hello"
